# ROV_autonomous_docking_in_ROS2

./: README.md
acit4820_project/: package.xml  setup.cfg  setup.py
acit4820_project/acit4820_project/: aruco_node.py  bluerov_pose_node.py  pose_estimation.py  rov_control_node.py  thruster_manager_node.py  utils.py
acit4820_project/config/: ekf.yaml  gz_bridge.yaml  thruster.yaml
acit4820_project/launch/: rov.launch.xml  rviz.launch.xml
acit4820_project/models/docking_station/: model.config  model.sdf
acit4820_project/rviz/: display.rviz
acit4820_project/urdf/: bluerov2.urdf  bluerov2.urdf.xacro  docking_station.urdf  docking_station.urdf.xacro  hydrodynamics.xacro  inertial_macros.xacro  sensors.xacro  thrusters.xacro
acit4820_project/worlds/: demo_world.world
