<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acit4820_project</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>cv2</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_control</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>gazebo_ros</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>aruco_interfaces</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_media_path="$(find-pkg-share acit4820_project)/materials/scripts"/>
  </export>
</package>